# go-proto-logfields

./: .gitignore  .gitmodules  BUILD.bazel  Makefile  README.md  WORKSPACE  extract.go  go.mod  go.sum  go_deps.bzl  logfields.go  logfields.pb.go  logfields.proto  logfields_test.go
bazel-protos/github.com/improbable-io/go-proto-logfields/: logfields.proto
examples/: BUILD.bazel  service.logfields.pb.go  service.pb.go  service.proto
internal/: BUILD.bazel
internal/genlogfields/: BUILD.bazel  genlogfields.go
plugin/: BUILD.bazel  plugin.go  plugin_test.go
proto/github.com/improbable-io/go-proto-logfields/: logfields.pb.go
protoc-gen-gologfields/: BUILD.bazel  main.go
scripts/includes/: deps.sh
src/github.com/improbable-io/go-proto-logfields/: logfields.pb.go  logfields.proto
test/: BUILD.bazel  logfields_errors_test.go  logfields_pb_test.go  logfields_test.go  test_proto2.proto  test_proto3.proto
test/bad_protos/: BUILD.bazel  duplicate_logfield_names.proto  logfields_errors_test.go  repeated_logfield.proto
test/gogo/: logfields_pb_test.go
