load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//proto:compiler.bzl", "go_proto_compiler")
load("@rules_proto//proto:defs.bzl", "proto_library")

filegroup(
    name = "logfields",
    srcs = ["logfields.proto"],
    visibility = ["//visibility:public"],
)

go_proto_compiler(
    name = "go_proto_logfields",
    plugin = "//protoc-gen-gologfields",
    suffix = ".logfields.pb.go",
    valid_archive = False,
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
    ],
)

go_proto_library(
    name = "_logfields",
    importpath = "github.com/improbable-io/go-proto-logfields",
    proto = ":logfields_proto",
    visibility = ["//:__pkg__"],
)

go_library(
    name = "go_default_library",
    srcs = ["extract.go"],
    embed = [":_logfields"],
    importpath = "github.com/improbable-io/go-proto-logfields",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)

proto_library(
    name = "logfields_proto",
    srcs = ["logfields.proto"],
    import_prefix = "github.com/improbable-io/go-proto-logfields",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:descriptor_proto",
    ],
)
