load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["plugin.go"],
    importpath = "github.com/improbable-io/go-proto-logfields/plugin",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "@com_github_gogo_protobuf//gogoproto:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_gogo_protobuf//protoc-gen-gogo/descriptor:go_default_library",
        "@com_github_gogo_protobuf//protoc-gen-gogo/generator:go_default_library",
        "@com_github_gogo_protobuf//vanity:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["plugin_test.go"],
    rundir = ".",
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
