load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/improbable-io/go-proto-logfields/protoc-gen-gologfields",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/genlogfields:go_default_library",
        "@org_golang_google_protobuf//compiler/protogen:go_default_library",
    ],
)

go_binary(
    name = "protoc-gen-gologfields",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
