load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "test_proto2",
    srcs = ["test_proto2.proto"],
    visibility = ["//visibility:private"],
    deps = [
        "//:logfields_proto",
    ],
)

proto_library(
    name = "test_proto3",
    srcs = ["test_proto3.proto"],
    visibility = ["//visibility:private"],
    deps = [
        "//:logfields_proto",
    ],
)

go_proto_library(
    name = "proto2",
    compilers = [
        "//:go_proto_logfields",
        "@io_bazel_rules_go//proto:go_proto",
    ],
    importpath = "dummy",
    proto = ":test_proto2",
)

go_proto_library(
    name = "proto3",
    compilers = [
        "//:go_proto_logfields",
        "//internal:go_proto",
    ],
    importpath = "dummy",
    proto = ":test_proto3",
)

go_test(
    name = "golang_test",
    size = "small",
    srcs = ["logfields_pb_test.go"],
    embed = [
        ":proto2",
        ":proto3",
    ],
    rundir = ".",
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)

proto_library(
    name = "logfieldstest_proto",
    srcs = [
        "test_proto2.proto",
        "test_proto3.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["//github.com/improbable-io/go-proto-logfields:logfields_proto"],
)

go_proto_library(
    name = "logfieldstest_go_proto",
    importpath = "github.com/improbable-io/go-proto-logfields/test",
    proto = ":logfieldstest_proto",
    visibility = ["//visibility:public"],
    deps = ["//github.com/improbable-io/go-proto-logfields:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":logfieldstest_go_proto"],
    importpath = "github.com/improbable-io/go-proto-logfields/test",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["logfields_pb_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)
