load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

# gazelle:proto_import_prefix
# gazelle:go_proto_compilers @io_bazel_rules_go//proto:go_proto,//:go_proto_logfields
# gazelle:go_grpc_compilers @io_bazel_rules_go//proto:go_grpc,//:go_proto_logfields
# gazelle:resolve proto go github.com/improbable-io/go-proto-logfields/logfields.proto //:go_default_library
# gazelle:exclude *.pb.go

proto_library(
    name = "logfieldstest_proto",
    srcs = [
        "test_proto2.proto",
        "test_proto3.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["//:logfields_proto"],
)

go_proto_library(
    name = "logfieldstest_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_proto",
        "//:go_proto_logfields",
    ],
    importpath = "github.com/improbable-io/go-proto-logfields/test",
    proto = ":logfieldstest_proto",
    visibility = ["//visibility:public"],
    deps = ["//:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":logfieldstest_go_proto"],
    importpath = "github.com/improbable-io/go-proto-logfields/test",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["logfields_pb_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)
